--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,8 @@
         "args": "after-used",
         "argsIgnorePattern": "^_"
       }
-    ]
+    ],
+    "react/jsx-uses-react": "on",
+    "react/react-in-jsx-scope": "on"
   }
 }
